fix dataMap类的测试用例完成